<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="id.co.blogspot.blogmozink.a2heal2carechildren.SplashScreen"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:text="@string/welcomeSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeSplash"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="28sp"
        android:textStyle="normal|bold|italic" />

    <TextView
        android:text="@string/splashText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dess"
        android:fontFamily="sans-serif"
        android:textStyle="normal|italic"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/welcomeSplash" />
    <TextView
        android:text="@string/splashText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dess1"
        android:fontFamily="sans-serif"
        android:textStyle="normal|italic"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/dess" />

    <TextView
        android:text="@string/splashText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dess2"
        android:fontFamily="sans-serif"
        android:textStyle="normal|italic"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/dess1" />

    <TextView
        android:text="@string/splashText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dess3"
        android:fontFamily="sans-serif"
        android:textStyle="normal|italic"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/dess2" />


    <TextView
        android:text="@string/splashText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dess4"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/dess3"
        android:textStyle="normal|italic" />

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/ic_2gether"
        android:id="@+id/logoSplash"
        android:layout_height="match_parent"
        android:layout_above="@+id/welcomeSplash"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />
</RelativeLayout>
