<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="id.co.blogspot.blogmozink.a2heal2carechildren.MainActivity"

    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/ic_2getherpsd"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/btn_eduk" />

    <Button
        android:text="@string/btn_laporKonselor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_bukuKontak"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:textAllCaps="false" />

    <Button
        android:text="@string/btn_eduk"
        android:layout_width="match_parent"
        android:id="@+id/btn_eduk"
        android:textSize="24sp"
        android:layout_height="60dp"
        android:layout_marginBottom="11dp"
        android:background="@color/colorPrimary"
        android:layout_above="@+id/btn_idn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="false" />

    <Button
        android:text="@string/btn_komunikasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:id="@+id/btn_kunciSukses"
        android:background="@color/colorPrimary"
        android:layout_above="@+id/btn_bukuKontak"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp"
        android:textAllCaps="false" />

    <Button
        android:text="@string/btn_idn"
        android:id="@+id/btn_idn"
        android:textSize="24sp"
        style="@style/Widget.AppCompat.Button"
        tools:style="@style/Widget.AppCompat.Button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="14dp"
        android:background="@color/colorPrimary"
        android:layout_above="@+id/btn_kunciSukses"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="false" />
</RelativeLayout>
