<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_komunikasi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="id.co.blogspot.blogmozink.a2heal2carechildren.komunikasi">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:background="@drawable/kunci1img"
                android:layout_marginBottom="0dp"
                >

            </RelativeLayout>

            <TextView
                android:text="@string/kunci1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="0dp"
                android:background="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:background="@drawable/kunci2img"
                android:layout_marginBottom="0dp"
                >

            </RelativeLayout>

            <TextView
                android:text="@string/kunci2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="0dp"
                android:background="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:background="@drawable/kunci3img"
                android:layout_marginBottom="0dp"
                >

            </RelativeLayout>

            <TextView
                android:text="@string/kunci3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:background="@drawable/kunci4img"
                android:layout_marginBottom="0dp"
                >

            </RelativeLayout>

            <TextView
                android:text="@string/kunci4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:background="@drawable/kunci5img"
                android:layout_marginBottom="0dp"
                >

            </RelativeLayout>

            <TextView
                android:text="@string/kunci5"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:background="@drawable/kunci6img"
                android:layout_marginBottom="0dp"
                >

            </RelativeLayout>

            <TextView
                android:text="@string/kunci6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:background="@drawable/kunci7img"
                android:layout_marginBottom="0dp"
                >
            </RelativeLayout>
            <TextView
                android:text="@string/kunci7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
