<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gejala_satu_activivy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="id.co.blogspot.blogmozink.a2heal2carechildren.GejalaSatuActivivy">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_weight="0.07">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/idea"
                android:id="@+id/imageView2" />

            <TextView
                android:text="@string/cmenyangkal1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/c1"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/imageView2"
                android:layout_toEndOf="@+id/imageView2"
                android:textStyle="normal|bold"
                android:textSize="18sp"/>
        </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_weight="0.07">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/idea"
                    android:id="@+id/imageView3" />

                <TextView
                    android:text="@string/cmenyangkal2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/c2"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/imageView3"
                    android:layout_toEndOf="@+id/imageView3"
                    android:textStyle="normal|bold"
                    android:textSize="18sp"
                    android:gravity="fill_horizontal"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.14">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/idea"
                    android:id="@+id/imageView4"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:text="@string/cmenyangkal3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/c3"
                    android:textStyle="normal|bold"
                    android:textSize="18sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/imageView4"
                    android:layout_toEndOf="@+id/imageView4" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.07">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/idea"
                    android:id="@+id/imageView5" />

                <TextView
                    android:text="@string/cmenyangkal4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/c4"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@+id/imageView5"
                    android:layout_toEndOf="@+id/imageView5"
                    android:textStyle="normal|bold"
                    android:textSize="18sp" />
            </RelativeLayout>

            <Button
                android:text="@string/selamatMencoba"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_selamat"
                android:layout_weight="0.07"
                android:background="@color/colorPrimary"
                android:textStyle="normal|bold"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
